# esp-lightning-mqtt

./: CHANGELOG.md  CMakeLists.txt  sdkconfig.defaults
.github/workflows/: build.yml
doc/: spec_for_agent.md
docs/: mqtt_schema.md  wiring.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
main/lightning/: as3935.c  as3935.h  lightning_task.c  lightning_task.h
main/mqtt/: mqtt_client.c  mqtt_client.h  mqtt_payload.c  mqtt_payload.h
main/utils/: nvs_config.c  nvs_config.h
main/wifi/: wifi_manager.c  wifi_manager.h
test/test_as3935/: CMakeLists.txt  test_as3935.c
